fix z-index name topHeroes + user-select none (menu)

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -22,6 +22,11 @@ nav {
       font-weight: bold;
       cursor: pointer;
 
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
       &:hover,
       &:active {
         color: $color-primary;
